Fix bug where Attachments tab in an event dialog could be invisible if the dialog has a scrollbar (page height is smaller than dialog content)

--- a/skins/chameleon/styles.less
+++ b/skins/chameleon/styles.less
@@ -2028,6 +2028,10 @@ a.button.changeformat.text.selected span.icon {
 	margin-bottom: 10px;
 }
 
+.ui-tabs .ui-tabs-nav li {
+	display: table-cell;
+}
+
 .ui-tabs .ui-tabs-nav li,
 .ui-tabs .ui-tabs-nav li.tablink a {
 	background: #ededed;
